[project]
name = "bb-stats"
version = "0.1.2"
description = "Terminal Bitbucket pull request and commit statistics viewer"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0",
  "requests>=2.31",
  "rich>=13.0",
  "textual>=0.80.0",
  "ty",
  "ruff",
]

[project.scripts]
bb-stats = "bb_stats:main"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
preview = true
